@@ -33,6 +33,7 @@ setting since version 1.2.0. If you have it on, turn it *off* if you can.
 * Fix for concurrency problem in job queue (image description page invalidation)
 * (bug 5497) regeression in HTML normalization in 1.6 (unclosed <li>,<dd>,<dt>)
 * (bug 5709) Allow customisation of separator for categories
+* (bug 4834) Fix XHTML output when using $wgMaxTocLevel
 
 
 == MediaWiki 1.6.3 ==
